--- a/HeThongPhongMachTu/HeThongPhongMachTu/ResourcesXAML/MyResources.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/ResourcesXAML/MyResources.xaml
@@ -4,5 +4,6 @@
                     xmlns:local="clr-namespace:HeThongPhongMachTu.ResourcesXAML">
 
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
+    <viewmodel:DangNhapViewModel x:Key="DangNhapVM"></viewmodel:DangNhapViewModel>
     
 </ResourceDictionary>
