--- a/HeThongPhongMachTu/HeThongPhongMachTu/DangNhap.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/DangNhap.xaml
@@ -10,6 +10,8 @@
         Title="Đăng nhập" Height="300" Width="400"
         WindowStartupLocation="CenterScreen"
     ResizeMode="NoResize"
+    WindowStyle="None"
+    DataContext="{StaticResource DangNhapVM}"
     >
     <Grid>
         <materialDesign:Card Width="300" Height="150"
