--- a/HeThongPhongMachTu/HeThongPhongMachTu/MainWindow.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/MainWindow.xaml
@@ -1,11 +1,21 @@
-﻿<dx:ThemedWindow 
-    x:Class="HeThongPhongMachTu.MainWindow"
+﻿<dx:ThemedWindow
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
     xmlns:Views="clr-namespace:HeThongPhongMachTu.Views"
+    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+    x:Class="HeThongPhongMachTu.MainWindow"
     Title="MainWindow" Height="800" Width="1000">
+    
     <Grid>
+        <!--<Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Height="120" VerticalAlignment="Top">
+            <Views:MainView Loaded="MainView_Loaded"/>
+        </Grid>-->
         <Views:MainView/>
     </Grid>
 </dx:ThemedWindow>
