--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/MainView.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/MainView.xaml
@@ -6,10 +6,127 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
     xmlns:ViewModels="clr-namespace:HeThongPhongMachTu.ViewModels"
-    mc:Ignorable="d" d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.DataContext>
-        <ViewModels:MainViewModel/>
-    </UserControl.DataContext>
+    xmlns:dxnav="http://schemas.devexpress.com/winfx/2008/xaml/navigation"
+    mc:Ignorable="d" d:DesignHeight="300" d:DesignWidth="1000"
+    >
     <Grid>
+        <dxnav:TileBar VerticalAlignment="Top"  Height="120" Background="#DFDFDF">
+
+            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+                <Grid Margin="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Grid.Column="0">
+                        <Image Source="../Images/list.png" />
+
+                    </Grid>
+
+                    <Grid Grid.Column="1">
+                        <Label Content="Tiếp Nhận" 
+                               VerticalAlignment="Center"
+                           Foreground="White"
+                           FontWeight="Bold"
+                           FontSize="12" />
+                    </Grid>
+
+                </Grid>
+            </dxnav:TileBarItem>
+
+            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+                <Grid Margin="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Grid.Column="0">
+                        <Image Source="../Images/stethoscope_white.PNG" />
+
+                    </Grid>
+
+                    <Grid Grid.Column="1">
+                        <Label Content="Khám bệnh" 
+                               VerticalAlignment="Center"
+                           Foreground="White"
+                           FontWeight="Bold"
+                           FontSize="12" Margin="0,14,-13,14" />
+                    </Grid>
+
+                </Grid>
+            </dxnav:TileBarItem>
+
+            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+                <Grid Margin="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Grid.Column="0">
+                        <Image Source="../Images/payment.png" />
+
+                    </Grid>
+
+                    <Grid Grid.Column="1">
+                        <Label Content="Thanh Toán" 
+                               VerticalAlignment="Center"
+                           Foreground="White"
+                           FontWeight="Bold"
+                           FontSize="12" Margin="0,14,-10,14" />
+                    </Grid>
+
+                </Grid>
+            </dxnav:TileBarItem>
+
+            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+                <Grid Margin="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Grid.Column="0">
+                        <Image Source="../Images/drug.png" />
+
+                    </Grid>
+
+                    <Grid Grid.Column="1">
+                        <Label Content="Nhà thuốc" 
+                               VerticalAlignment="Center"
+                           Foreground="White"
+                           FontWeight="Bold"
+                           FontSize="12" />
+                    </Grid>
+
+                </Grid>
+            </dxnav:TileBarItem>
+
+            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+                <Grid Margin="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Grid.Column="0">
+                        <Image Source="../Images/statitic.png" />
+
+                    </Grid>
+
+                    <Grid Grid.Column="1">
+                        <Label Content="Quản lý" 
+                               VerticalAlignment="Center"
+                           Foreground="White"
+                           FontWeight="Bold"
+                           FontSize="12" />
+                    </Grid>
+
+                </Grid>
+            </dxnav:TileBarItem>
+
+        </dxnav:TileBar>
     </Grid>
 </UserControl>
