--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_ChoKham.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_ChoKham.xaml
@@ -1,15 +1,14 @@
-﻿<UserControl x:Class="HeThongPhongMachTu.Views.ucTiepNhan_DSBenhNhan"
+﻿<UserControl x:Class="HeThongPhongMachTu.Views.ucKhamBenh_ChoKham"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:HeThongPhongMachTu.Views"
-            xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             DataContext="{StaticResource TiepNhanDSBenhNhanVM}"
-             >
+             DataContext="{StaticResource KhamBenh_ChoKhamVM}"
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style TargetType="Image">
             <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
@@ -35,14 +34,9 @@
                         <Style TargetType="dxwui:NavigationButton">
                             <Setter Property="Margin" Value="1 10 1 10"/>
                         </Style>
-                        <Style TargetType="Image">
-                            <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
-                            <Setter Property="Width" Value="50"/>
-                            <Setter Property="HorizontalAlignment" Value="Left"/>
-                        </Style>
                     </DockPanel.Resources>
 
-                    <dxwui:NavigationButton DockPanel.Dock="Top" NavigateTo="ucTiepNhapOptions">
+                    <dxwui:NavigationButton DockPanel.Dock="Top" >
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -50,18 +44,19 @@
                             </Grid.RowDefinitions>
 
                             <Grid Grid.Row="0" HorizontalAlignment="Left">
-                                <Image Source="../Images/todayicon_gray.png"/>
+                                <Image Source="../Images/stethoscope_gray.png"/>
                             </Grid>
 
                             <Grid Grid.Row="1">
-                                <Label Content="Danh sách trong ngày"
+                                <Label Content="Bệnh nhân chờ khám"
                                        FontWeight="Bold"/>
                             </Grid>
 
                         </Grid>
                     </dxwui:NavigationButton>
 
-                    <dxwui:NavigationButton DockPanel.Dock="Top">
+                    <dxwui:NavigationButton Command="{Binding ShowSomethingCommand}"
+                        DockPanel.Dock="Top" NavigateTo="ucKhamBenh_DaKham">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -69,11 +64,11 @@
                             </Grid.RowDefinitions>
 
                             <Grid Grid.Row="0" HorizontalAlignment="Left">
-                                <Image Source="../Images/listaccount_gray.PNG"/>
+                                <Image Source="../Images/historyicon_gray.PNG"/>
                             </Grid>
 
                             <Grid Grid.Row="1">
-                                <Label Content="Danh sách bệnh nhân"
+                                <Label Content="Bệnh nhân đã khám"
                                        FontWeight="Bold"/>
                             </Grid>
 
@@ -85,7 +80,7 @@
 
             <Grid Grid.Column="1">
                 <DockPanel LastChildFill="True">
-                    <ComboBox x:Name="comboBoxTimBNCu" Margin="0 5 0 0"
+                    <!--<ComboBox x:Name="comboBoxSearchBenhNhan" Margin="0 5 0 0"
                         DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Search"
                           IsEditable="True"
                           materialDesign:HintAssist.HintOpacity=".26">
@@ -93,10 +88,10 @@
                         <ComboBoxItem Content="Banana"/>
                         <ComboBoxItem Content="Pear"/>
                         <ComboBoxItem Content="Orange"/>
-                    </ComboBox>
+                    </ComboBox>-->
 
                     <Border BorderBrush="Gray" BorderThickness="1">
-                        <ListView x:Name="listViewDSTrongNgay" 
+                        <ListView x:Name="listViewDSChoKham" 
                               HorizontalContentAlignment="Center">
                             <ListView.Resources>
                                 <Style TargetType="{x:Type GridViewColumnHeader}">
@@ -124,8 +119,8 @@
 
         <Grid Grid.Row="1" Background="#6A6868" Margin="0">
             <DockPanel LastChildFill="False" HorizontalAlignment="Center">
-                
-                <Button Name="buttonThemBenhNhan"
+
+                <Button Name="buttonPhieuKhamMoi"
                     Background="Transparent" BorderThickness="0"
                         Margin="0" Width="auto" Height="auto">
                     <Grid>
@@ -140,15 +135,15 @@
                         </Grid>
 
                         <Grid Grid.Row="1">
-                            <Label Content="Thêm" HorizontalAlignment="Center"
+                            <Label Content="Phiếu khám mới" HorizontalAlignment="Center"
                                    Foreground="White"
                                        FontWeight="Normal"/>
                         </Grid>
                     </Grid>
 
                 </Button>
-                
-                <Button Name="buttonSuaBenhNhan"
+
+                <Button Name="buttonXemBenhAn"
                     Background="Transparent" BorderThickness="0"
                         Margin="0" Width="auto" Height="auto">
                     <Grid>
@@ -159,41 +154,18 @@
 
                         <Grid Grid.Row="0">
                             <Image HorizontalAlignment="Center"
-                                Source="../Images/editicon.PNG" Width="50" />
+                                Source="../Images/medicalbill_white.PNG" Width="50" />
                         </Grid>
 
                         <Grid Grid.Row="1">
-                            <Label Content="Sửa" HorizontalAlignment="Center"
+                            <Label Content="Xem sổ" HorizontalAlignment="Center"
                                    Foreground="White"
                                        FontWeight="Normal"/>
                         </Grid>
                     </Grid>
 
                 </Button>
-                
-                <Button  Name="buttonXoaBenhNhan"
-                    Background="Transparent" BorderThickness="0"
-                        Margin="0" Width="auto" Height="auto">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
 
-                        <Grid Grid.Row="0">
-                            <Image HorizontalAlignment="Center"
-                                Source="../Images/delicon.PNG" Width="50" />
-                        </Grid>
-
-                        <Grid Grid.Row="1">
-                            <Label Content="Xóa" HorizontalAlignment="Center"
-                                   Foreground="White"
-                                       FontWeight="Normal"/>
-                        </Grid>
-                    </Grid>
-
-                </Button>
-                
             </DockPanel>
 
         </Grid>
