--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_DaKham.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_DaKham.xaml
@@ -1,15 +1,13 @@
-﻿<UserControl x:Class="HeThongPhongMachTu.Views.ucTiepNhan_DSBenhNhan"
+﻿<UserControl x:Class="HeThongPhongMachTu.Views.ucKhamBenh_DaKham"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HeThongPhongMachTu.Views"
-            xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             DataContext="{StaticResource TiepNhanDSBenhNhanVM}"
-             >
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style TargetType="Image">
             <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
@@ -42,7 +40,7 @@
                         </Style>
                     </DockPanel.Resources>
 
-                    <dxwui:NavigationButton DockPanel.Dock="Top" NavigateTo="ucTiepNhapOptions">
+                    <dxwui:NavigationButton DockPanel.Dock="Top" NavigateTo="ucKhamBenh_ChoKham">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -50,11 +48,11 @@
                             </Grid.RowDefinitions>
 
                             <Grid Grid.Row="0" HorizontalAlignment="Left">
-                                <Image Source="../Images/todayicon_gray.png"/>
+                                <Image Source="../Images/stethoscope_gray.png"/>
                             </Grid>
 
                             <Grid Grid.Row="1">
-                                <Label Content="Danh sách trong ngày"
+                                <Label Content="Bệnh nhân chờ khám"
                                        FontWeight="Bold"/>
                             </Grid>
 
@@ -69,11 +67,11 @@
                             </Grid.RowDefinitions>
 
                             <Grid Grid.Row="0" HorizontalAlignment="Left">
-                                <Image Source="../Images/listaccount_gray.PNG"/>
+                                <Image Source="../Images/historyicon_gray.PNG"/>
                             </Grid>
 
                             <Grid Grid.Row="1">
-                                <Label Content="Danh sách bệnh nhân"
+                                <Label Content="Bệnh nhân đã khám"
                                        FontWeight="Bold"/>
                             </Grid>
 
@@ -85,7 +83,7 @@
 
             <Grid Grid.Column="1">
                 <DockPanel LastChildFill="True">
-                    <ComboBox x:Name="comboBoxTimBNCu" Margin="0 5 0 0"
+                    <ComboBox x:Name="comboBoxTimBNDaKham" Margin="0 5 0 0"
                         DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Search"
                           IsEditable="True"
                           materialDesign:HintAssist.HintOpacity=".26">
@@ -96,7 +94,7 @@
                     </ComboBox>
 
                     <Border BorderBrush="Gray" BorderThickness="1">
-                        <ListView x:Name="listViewDSTrongNgay" 
+                        <ListView x:Name="listViewDSDaKham" 
                               HorizontalContentAlignment="Center">
                             <ListView.Resources>
                                 <Style TargetType="{x:Type GridViewColumnHeader}">
@@ -124,9 +122,8 @@
 
         <Grid Grid.Row="1" Background="#6A6868" Margin="0">
             <DockPanel LastChildFill="False" HorizontalAlignment="Center">
-                
-                <Button Name="buttonThemBenhNhan"
-                    Background="Transparent" BorderThickness="0"
+
+                <!--<Button Background="Transparent" BorderThickness="0"
                         Margin="0" Width="auto" Height="auto">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -147,9 +144,8 @@
                     </Grid>
 
                 </Button>
-                
-                <Button Name="buttonSuaBenhNhan"
-                    Background="Transparent" BorderThickness="0"
+
+                <Button Background="Transparent" BorderThickness="0"
                         Margin="0" Width="auto" Height="auto">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -170,9 +166,8 @@
                     </Grid>
 
                 </Button>
-                
-                <Button  Name="buttonXoaBenhNhan"
-                    Background="Transparent" BorderThickness="0"
+
+                <Button Background="Transparent" BorderThickness="0"
                         Margin="0" Width="auto" Height="auto">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -192,8 +187,8 @@
                         </Grid>
                     </Grid>
 
-                </Button>
-                
+                </Button>-->
+
             </DockPanel>
 
         </Grid>
