--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucThanhToan.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucThanhToan.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="HeThongPhongMachTu.Views.ucKhamBenh"
+﻿<UserControl x:Class="HeThongPhongMachTu.Views.ucThanhToan"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HeThongPhongMachTu.Views"
-             xmlns:dxnav="http://schemas.devexpress.com/winfx/2008/xaml/navigation"
              xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
-             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
              xmlns:dxwuin="http://schemas.devexpress.com/winfx/2008/xaml/windowsui/navigation"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
+             xmlns:dxnav="http://schemas.devexpress.com/winfx/2008/xaml/navigation"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel LastChildFill="True">
@@ -144,7 +144,7 @@
             <dxmvvm:Interaction.Behaviors>
                 <dxwuin:FrameNavigationService />
             </dxmvvm:Interaction.Behaviors>
-            <local:ucKhamBenh_ChoKham></local:ucKhamBenh_ChoKham>
+            <local:ucThanhToan_ChoThanhToan></local:ucThanhToan_ChoThanhToan>
         </dxwui:NavigationFrame>
 
     </DockPanel>
