--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucNhaThuoc.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucNhaThuoc.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="HeThongPhongMachTu.Views.ucKhamBenh"
+﻿<UserControl x:Class="HeThongPhongMachTu.Views.ucNhaThuoc"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,6 +10,13 @@
              xmlns:dxwuin="http://schemas.devexpress.com/winfx/2008/xaml/windowsui/navigation"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="Image">
+            <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
+            <Setter Property="Width" Value="50"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
+    </UserControl.Resources>
     <DockPanel LastChildFill="True">
 
         <dxnav:TileBar
@@ -22,7 +29,8 @@
                 </Style>
             </dxnav:TileBar.Resources>
 
-            <dxnav:TileBarItem Name="tileTiepNhan"
+            <dxnav:TileBarItem Name="tileTiepNhan" Command="{Binding SwitchToTiepNhan}"
+                               CommandParameter="{Binding ElementName=frameThanhToan}"
                 Height="70" Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
@@ -144,12 +152,12 @@
 
         </dxnav:TileBar>
 
-
-        <dxwui:NavigationFrame DockPanel.Dock="Bottom" AnimationType="Fade">
+        <dxwui:NavigationFrame Name="frameNhaThuoc"
+            DockPanel.Dock="Bottom" AnimationType="Fade">
             <dxmvvm:Interaction.Behaviors>
                 <dxwuin:FrameNavigationService />
             </dxmvvm:Interaction.Behaviors>
-            <local:ucKhamBenh_ChoKham></local:ucKhamBenh_ChoKham>
+            <local:ucNhaThuoc_ChoNhanThuoc></local:ucNhaThuoc_ChoNhanThuoc>
         </dxwui:NavigationFrame>
 
     </DockPanel>
