--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucTiepNhan.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucTiepNhan.xaml
@@ -25,7 +25,7 @@
                 </Style>
             </dxnav:TileBar.Resources>
 
-        <dxnav:TileBarItem 
+            <dxnav:TileBarItem Name="tileTiepNhan"
                 Height="70" Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
@@ -49,7 +49,8 @@
                 </Grid>
             </dxnav:TileBarItem>
 
-            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+            <dxnav:TileBarItem Name="tileKhamBenh"
+                Height="70" Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -72,7 +73,8 @@
                 </Grid>
             </dxnav:TileBarItem>
 
-            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+            <dxnav:TileBarItem Name="tileThanhToan"
+                Height="70" Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -95,7 +97,8 @@
                 </Grid>
             </dxnav:TileBarItem>
 
-            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+            <dxnav:TileBarItem Name="tileNhaThuoc"
+                Height="70" Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -118,7 +121,8 @@
                 </Grid>
             </dxnav:TileBarItem>
 
-            <dxnav:TileBarItem Height="70" Background="#0AB06B" Padding="5">
+            <dxnav:TileBarItem Name="tileQuanLy"
+                Height="70" Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -142,6 +146,7 @@
             </dxnav:TileBarItem>
 
         </dxnav:TileBar>
+
 
         <dxwui:NavigationFrame DockPanel.Dock="Bottom" AnimationType="Fade">
             <dxmvvm:Interaction.Behaviors>
