--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucQuanLy.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucQuanLy.xaml
@@ -22,8 +22,8 @@
                 </Style>
             </dxnav:TileBar.Resources>
 
-            <dxnav:TileBarItem Name="tileTiepNhan"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton Height="60" Width="200" NavigateTo="ucTiepNhan" Opacity="0.5"
+                 Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -44,10 +44,9 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileKhamBenh"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucKhamBenh" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -64,14 +63,13 @@
                                VerticalAlignment="Center"
                            Foreground="White"
                            FontWeight="Bold"
-                           FontSize="12" Margin="0,14,-13,14" />
+                           FontSize="12"  />
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileThanhToan"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucThanhToan" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -88,14 +86,13 @@
                                VerticalAlignment="Center"
                            Foreground="White"
                            FontWeight="Bold"
-                           FontSize="12" Margin="0,14,-10,14" />
+                           FontSize="12" />
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileNhaThuoc"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucNhaThuoc" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -116,10 +113,9 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileQuanLy"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton Height="60" Width="200" Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -140,9 +136,10 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
         </dxnav:TileBar>
+
 
 
         <dxwui:NavigationFrame DockPanel.Dock="Bottom" AnimationType="Fade">
