--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucThanhToan.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucThanhToan.xaml
@@ -31,9 +31,8 @@
                 </Style>
             </dxnav:TileBar.Resources>
 
-            <dxnav:TileBarItem Name="tileTiepNhan" Command="{Binding SwitchToTiepNhan}"
-                               CommandParameter="{Binding ElementName=frameThanhToan}"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucTiepNhan" Opacity="0.5" Height="60" Width="200" 
+                 Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -54,10 +53,9 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileKhamBenh"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucKhamBenh" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -74,14 +72,13 @@
                                VerticalAlignment="Center"
                            Foreground="White"
                            FontWeight="Bold"
-                           FontSize="12" Margin="0,14,-13,14" />
+                           FontSize="12"  />
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileThanhToan"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton Height="60" Width="200" Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -98,14 +95,13 @@
                                VerticalAlignment="Center"
                            Foreground="White"
                            FontWeight="Bold"
-                           FontSize="12" Margin="0,14,-10,14" />
+                           FontSize="12" />
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileNhaThuoc"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucNhaThuoc" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -126,10 +122,9 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileQuanLy"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucQuanLy" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -150,9 +145,10 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
         </dxnav:TileBar>
+
 
         <dxwui:NavigationFrame Name="frameThanhToan"
             DockPanel.Dock="Bottom" AnimationType="Fade">
