--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucTiepNhan.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucTiepNhan.xaml
@@ -25,8 +25,8 @@
                 </Style>
             </dxnav:TileBar.Resources>
 
-            <dxnav:TileBarItem Name="tileTiepNhan"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton Height="60" Width="200" 
+                 Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -47,10 +47,9 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileKhamBenh"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucKhamBenh" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -67,14 +66,13 @@
                                VerticalAlignment="Center"
                            Foreground="White"
                            FontWeight="Bold"
-                           FontSize="12" Margin="0,14,-13,14" />
+                           FontSize="12"  />
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileThanhToan"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucThanhToan" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -91,14 +89,13 @@
                                VerticalAlignment="Center"
                            Foreground="White"
                            FontWeight="Bold"
-                           FontSize="12" Margin="0,14,-10,14" />
+                           FontSize="12" />
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileNhaThuoc"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucNhaThuoc" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -119,10 +116,9 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
-            <dxnav:TileBarItem Name="tileQuanLy"
-                Height="70" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton NavigateTo="ucQuanLy" Height="60" Width="200" Background="#0AB06B" Opacity="0.5" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -143,10 +139,9 @@
                     </Grid>
 
                 </Grid>
-            </dxnav:TileBarItem>
+            </dxwui:NavigationButton>
 
         </dxnav:TileBar>
-
 
         <dxwui:NavigationFrame DockPanel.Dock="Bottom" AnimationType="Fade">
             <dxmvvm:Interaction.Behaviors>
