--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_DaKham.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_DaKham.xaml
@@ -59,7 +59,7 @@
                         </Grid>
                     </dxwui:NavigationButton>
 
-                    <dxwui:NavigationButton DockPanel.Dock="Top">
+                    <dxwui:NavigationButton DockPanel.Dock="Top" Background="#2F51A5">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -67,11 +67,12 @@
                             </Grid.RowDefinitions>
 
                             <Grid Grid.Row="0" HorizontalAlignment="Left">
-                                <Image Source="../Images/historyicon_gray.PNG"/>
+                                <Image Source="../Images/historyicon_white.PNG"/>
                             </Grid>
 
                             <Grid Grid.Row="1">
                                 <Label Content="Bệnh nhân đã khám"
+                                       Foreground="White"
                                        FontWeight="Bold"/>
                             </Grid>
 
