--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucTiepNhan_DSTrongNgay.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucTiepNhan_DSTrongNgay.xaml
@@ -37,7 +37,7 @@
                         </Style>
                     </DockPanel.Resources>
 
-                    <dxwui:NavigationButton DockPanel.Dock="Top">
+                    <dxwui:NavigationButton DockPanel.Dock="Top" Background="#2F51A5">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -45,13 +45,14 @@
                             </Grid.RowDefinitions>
 
                             <Grid Grid.Row="0" HorizontalAlignment="Left">
-                                <Image Source="../Images/todayicon_gray.png"
+                                <Image Source="../Images/todayicon_white.png"
                                        RenderOptions.BitmapScalingMode="HighQuality"
                                        Width="50" HorizontalAlignment="Left"/>
                             </Grid>
 
                             <Grid Grid.Row="1">
                                 <Label Content="Danh sách trong ngày"
+                                       Foreground="White"
                                        FontWeight="Bold"/>
                             </Grid>
 
