--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucQuanLy.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucQuanLy.xaml
@@ -115,7 +115,8 @@
                 </Grid>
             </dxwui:NavigationButton>
 
-            <dxwui:NavigationButton Height="60" Width="200" Background="#0AB06B" Padding="5">
+            <dxwui:NavigationButton Height="60" Width="200" BorderBrush="White" BorderThickness="2"
+                                    Background="#0AB06B" Padding="5">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
